[gd_scene load_steps=11 format=2]

[ext_resource path="res://Characters/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Enemies/Rat/RatRayCast.gd" type="Script" id=2]
[ext_resource path="res://Characters/Enemies/Rat/RatStates/StateMachineEnemie.gd" type="Script" id=3]
[ext_resource path="res://Characters/Enemies/Rat/RatStates/Move.gd" type="Script" id=4]
[ext_resource path="res://Characters/Enemies/Rat/RatStates/Died.gd" type="Script" id=5]
[ext_resource path="res://Characters/Enemies/Rat/rat.png" type="Texture" id=6]
[ext_resource path="res://Assets/Graphics/Sunny Land/enemy-deadth.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.6034, 10 )

[sub_resource type="Animation" id=2]
resource_name = "Died"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spr:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("spr:hframes")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("spr:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Walk"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("spr:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("spr:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("spr:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="RatRayCast" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="EnemyStateMachine" parent="." index="0"]
script = ExtResource( 3 )

[node name="Walk" type="Node" parent="EnemyStateMachine" index="0"]
script = ExtResource( 4 )

[node name="Died" type="Node" parent="EnemyStateMachine" index="1"]
script = ExtResource( 5 )

[node name="col" parent="DetectCollision" index="0"]
position = Vector2( -2.42311, 0.538471 )
shape = SubResource( 1 )

[node name="spr" parent="." index="2"]
texture = ExtResource( 6 )
hframes = 6

[node name="col" parent="." index="3"]
position = Vector2( -3.37502, 5.43592 )

[node name="anim" type="AnimationPlayer" parent="." index="4"]
anims/Died = SubResource( 2 )
anims/Walk = SubResource( 3 )

[node name="ray_right" type="RayCast2D" parent="." index="5"]
position = Vector2( 11.5443, 13.7429 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="ray_left" type="RayCast2D" parent="." index="6"]
position = Vector2( -17.4919, 13.7429 )
enabled = true
cast_to = Vector2( 0, 5 )
[connection signal="body_entered" from="DetectCollision" to="." method="_on_DetectCollision_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
